--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.6.0",
     "@types/node": "^20.9.4",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
