--- a/packages/q-view/package.json
+++ b/packages/q-view/package.json
@@ -8,14 +8,14 @@
     "prepublishOnly": "pnpm run build"
   },
   "type": "module",
-  "main": "./lib/index.umd.js",
-  "module": "./lib/index.js",
-  "types": "./lib/types/index.d.ts",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./lib/index.js",
-      "require": "./lib/index.umd.js",
-      "types": "./lib/types/index.d.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "keywords": [
@@ -49,7 +49,8 @@
   },
   "devDependencies": {
     "less": "^4.2.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "vite": "^5.0.2"
   },
   "engines": {
     "node": ">=14.18.0"
