--- a/packages/q-view/package.json
+++ b/packages/q-view/package.json
@@ -24,8 +24,6 @@
     "web components"
   ],
   "dependencies": {
-    "quarkc": "^1.0.40",
-    "codemirror": "^6.0.1",
     "@codemirror/autocomplete": "^6.11.0",
     "@codemirror/commands": "^6.3.0",
     "@codemirror/lang-angular": "^0.1.2",
@@ -45,7 +43,10 @@
     "@codemirror/lang-xml": "^6.0.2",
     "@codemirror/language": "^6.9.2",
     "@codemirror/state": "^6.3.1",
-    "@codemirror/view": "^6.22.0"
+    "@codemirror/view": "^6.22.0",
+    "codemirror": "^6.0.1",
+    "plyr": "^3.7.8",
+    "quarkc": "^1.0.40"
   },
   "devDependencies": {
     "less": "^4.2.0",
