--- a/packages/q-view/package.json
+++ b/packages/q-view/package.json
@@ -44,7 +44,9 @@
     "@codemirror/language": "^6.9.2",
     "@codemirror/state": "^6.3.1",
     "@codemirror/view": "^6.22.0",
+    "@types/prismjs": "^1.26.3",
     "codemirror": "^6.0.1",
+    "prismjs": "^1.29.0",
     "quarkc": "^1.0.40"
   },
   "devDependencies": {
