--- a/packages/q-view/tsconfig.json
+++ b/packages/q-view/tsconfig.json
@@ -9,7 +9,7 @@
     "jsxFragmentFactory": "QuarkElement.Fragment",
     "sourceMap": false,
     "declaration": true,
-    "declarationDir": "lib/types",
+    "declarationDir": "dist/types",
     "emitDeclarationOnly": true,
     "removeComments": true,
     "resolveJsonModule": true,
