--- a/packages/q-view/package.json
+++ b/packages/q-view/package.json
@@ -4,9 +4,15 @@
   "scripts": {
     "dev": "pnpm run start",
     "start": "vite --open",
-    "build": "vite build --config vite.config.build.ts && tsc",
-    "build:web": "vite build --config vite.config.web.ts && tsc"
+    "build:lib": "vite build --config vite.config.build.ts && tsc",
+    "build:web": "vite build --config vite.config.web.ts && tsc",
+    "publish": "pnpm run build:lib && pnpm publish --no-git-checks"
   },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "type": "module",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.js",
@@ -21,7 +27,10 @@
   "keywords": [
     "frontend",
     "ui",
-    "web components"
+    "web components",
+    "image-resize",
+    "image-cropper",
+    "codemirror"
   ],
   "dependencies": {
     "@codemirror/autocomplete": "^6.11.0",
